# spotify-shuffle

./: .gitignore  README.md  main.py  pyproject.toml  shuffle_main_playlist.sh
scripts/: update_refresh_token.py
src/: shuffle.py  spotify_custom.py
tests/: test_shuffle.py
